--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.loliveira.flutter_blu_nfc_example">
+    <uses-permission android:name="android.permission.BLUETOOTH" />  
+	  <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />  
+	  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>  
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
+    
    <application
         android:label="flutter_blu_nfc_example"
         android:icon="@mipmap/ic_launcher">
